--- a/my-account-posted-blog.html
+++ b/my-account-posted-blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Account - My Posted Blog</title>
-    <link rel="stylesheet" href="css/lib/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/swiper.css">
     <link rel="stylesheet" href="css/lib/imageuploadify.min.css" />
@@ -258,7 +258,7 @@
                                         <div class="contactsection__tabbody">
                                             <div class="tabcontent show" id="tabcontent1">
                                                 <div class="row postedblogrow">
-                                                    <div class="col-lg-4 col-md-6">
+                                                    <div class="col-xl-4 col-md-6">
                                                         <div class="recipesslide">
                                                             <div class="recipesslide__imgwrap">
                                                                 <img src="img/blog/blogpic1.png" alt="img">
@@ -290,7 +290,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-4 col-md-6">
+                                                    <div class="col-xl-4 col-md-6">
                                                         <div class="recipesslide">
                                                             <div class="recipesslide__imgwrap">
                                                                 <img src="img/blog/blogpic2.png" alt="img">
@@ -322,7 +322,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-4 col-md-6">
+                                                    <div class="col-xl-4 col-md-6">
                                                         <div class="recipesslide">
                                                             <div class="recipesslide__imgwrap">
                                                                 <img src="img/blog/blogpic3.png" alt="img">
@@ -354,7 +354,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-4 col-md-6">
+                                                    <div class="col-xl-4 col-md-6">
                                                         <div class="recipesslide">
                                                             <div class="recipesslide__imgwrap">
                                                                 <img src="img/blog/blogpic4.png" alt="img">
@@ -386,7 +386,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-4 col-md-6">
+                                                    <div class="col-xl-4 col-md-6">
                                                         <div class="recipesslide">
                                                             <div class="recipesslide__imgwrap">
                                                                 <img src="img/blog/blogpic5.png" alt="img">
@@ -418,7 +418,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-4 col-md-6">
+                                                    <div class="col-xl-4 col-md-6">
                                                         <div class="recipesslide">
                                                             <div class="recipesslide__imgwrap">
                                                                 <img src="img/blog/blogpic6.png" alt="img">
@@ -454,7 +454,7 @@
                                             </div>
                                             <div class="tabcontent" id="tabcontent2">
                                                 <div class="row postedblogrow">
-                                                    <div class="col-lg-4 col-md-6">
+                                                    <div class="col-xl-4 col-md-6">
                                                         <div class="recipesslide">
                                                             <div class="recipesslide__imgwrap">
                                                                 <img src="img/blog/blogpic4.png" alt="img">
@@ -486,7 +486,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-4 col-md-6">
+                                                    <div class="col-xl-4 col-md-6">
                                                         <div class="recipesslide">
                                                             <div class="recipesslide__imgwrap">
                                                                 <img src="img/blog/blogpic5.png" alt="img">
@@ -605,6 +605,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="js/lib/swiper.js"></script>
     <script src="js/lib/imageuploadify.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/common.js"></script>
 </body>
 
