--- a/edit-blog.html
+++ b/edit-blog.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Blog</title>
-    <link rel="stylesheet" href="css/lib/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/imageuploadify.min.css" />
     <link rel="stylesheet" href="css/lib/swiper.css">
 
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 
 <body>
     <header class="header loginuser">
@@ -345,6 +344,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/35.3.0/super-build/ckeditor.js"></script>
     <script src="js/lib/imageuploadify.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/common.js"></script>
 
 
