--- a/my-account-posted-reviews.html
+++ b/my-account-posted-reviews.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Account - My Posted Reviews</title>
-    <link rel="stylesheet" href="css/lib/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/swiper.css">
     <link rel="stylesheet" href="css/lib/imageuploadify.min.css" />
@@ -602,6 +602,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="js/lib/swiper.js"></script>
     <script src="js/lib/imageuploadify.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/common.js"></script>
 </body>
 
