--- a/sitemap.html
+++ b/sitemap.html
@@ -59,7 +59,7 @@
             <li><a href="seller-create-acc-st2.html" target="_blank">Create a seller account (phone number)</a></li>
             <li><a href="seller-create-acc-st3.html" target="_blank">Create a seller account (SMS code)</a></li>
             <li><a href="seller-acc-product-list.html" target="_blank">Seller Account/Product list</a></li>
-            
+            <li><a href="seller-acc-product-list-addproduct.html" target="_blank">Seller Account/Product list - Add Product</a></li>
         </ul>
     </div>
 
