--- a/seller-acc-product-list.html
+++ b/seller-acc-product-list.html
@@ -241,7 +241,8 @@
                                                                                 src="img/selleracc/close.svg"
                                                                                 alt="delete"></button></span>
                                                                 </div>
-                                                                <a href="#" class="details">Details</a>
+                                                                <a href="#" class="details" data-bs-toggle="modal"
+                                                                    data-bs-target="#proddetails">Details</a>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -275,7 +276,8 @@
                                                                 <p class="title">
                                                                     Céréal Apricot Tart, Gluten Free, Lactose Free
                                                                 </p>
-                                                                <a href="#" class="details">Details</a>
+                                                                <a href="#" class="details" data-bs-toggle="modal"
+                                                                    data-bs-target="#proddetails">Details</a>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -308,7 +310,8 @@
                                                                 <p class="title">
                                                                     Pesoforma Porridge Cacao e Avena, 5 x 55g
                                                                 </p>
-                                                                <a href="#" class="details">Details</a>
+                                                                <a href="#" class="details" data-bs-toggle="modal"
+                                                                    data-bs-target="#proddetails">Details</a>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -341,7 +344,8 @@
                                                                 <p class="title">
                                                                     Bucce di Psillio Biologico - Purezza 99% - da 200 g.
                                                                 </p>
-                                                                <a href="#" class="details">Details</a>
+                                                                <a href="#" class="details" data-bs-toggle="modal"
+                                                                    data-bs-target="#proddetails">Details</a>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -375,7 +379,8 @@
                                                                 <p class="title">
                                                                     Biaglut Biscottino Granulato, 340g, 3 1
                                                                 </p>
-                                                                <a href="#" class="details">Details</a>
+                                                                <a href="#" class="details" data-bs-toggle="modal"
+                                                                    data-bs-target="#proddetails">Details</a>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -408,7 +413,8 @@
                                                                 <p class="title">
                                                                     Bauli Plumcake "Senza" Mela - 132 G
                                                                 </p>
-                                                                <a href="#" class="details">Details</a>
+                                                                <a href="#" class="details" data-bs-toggle="modal"
+                                                                    data-bs-target="#proddetails">Details</a>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -431,13 +437,15 @@
 
                                     <div class="pagination">
                                         <ul>
-                                            <li><a href="#"><img src="img/general/pagination-prev.svg" alt="prev"></a></li>
+                                            <li><a href="#"><img src="img/general/pagination-prev.svg" alt="prev"></a>
+                                            </li>
                                             <li><a href="#">1</a></li>
                                             <li class="active"><a href="#">2</a></li>
                                             <li><a href="#">3</a></li>
                                             <li>...</li>
                                             <li><a href="#">11</a></li>
-                                            <li><a href="#"><img src="img/general/pagination-next.svg" alt="next"></a></li>
+                                            <li><a href="#"><img src="img/general/pagination-next.svg" alt="next"></a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -517,6 +525,241 @@
             </div>
         </div>
     </footer>
+
+
+
+    <!-- Modal -->
+    <div class="modal fade generalmodal largemodal" id="proddetails" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="productdetails">
+                    <div class="title">Product details</div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="roductdetails__infoblock">
+                                <p class="infoblock__title">Position name</p>
+                                <p class="positionname">
+                                    Musclefit Pancake Proteico Preparato Fast facile e veloce 250g per la tua colazione
+                                    Fit (Original)
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="roductdetails__infoblock">
+                                <p class="infoblock__title">Short description</p>
+                                <p>
+                                    Etiam non nunc vehicula, facilisis nunc vitae, tristique leo. Suspendisse lectus
+                                    justo, commodo ut dapibus nec, aliquam vitae nulla. Maecenas ultricies viverra mi,
+                                    vel feugiat nunc bibendum at. Aenean eget dolor elit. Nam ac lorem ipsum. Nullam
+                                    pretium nunc eget suscipit finibus. Sed a orci quis lectus aliquet posuere.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="roductdetails__infoblock">
+                                <ul class="infoblock__list">
+                                    <li>Price: <span class="infoblock__list-price">$ 20.99</span></li>
+                                    <li>Unit: <span>Pcs</span></li>
+                                    <li>
+                                        <img src="img/general/list-check.svg" alt="img">
+                                        Available
+                                    </li>
+                                    <li>
+                                        Brand: <span>Céréal</span>
+                                    </li>
+                                    <li>
+                                        Category on the marketplace: <span>Products</span>
+                                    </li>
+                                    <li>Select a product type: <span>Cakes</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="roductdetails__infoblock">
+                                <p class="infoblock__title">Product description</p>
+                                <p>
+                                    Most orders are shipped within 1 hour of being placed. Food will not be able to
+                                    cancel an order once it has been shipped. You will be able to start the return
+                                    process after receiving your order. For this you need to contact one of our
+                                    managers. Refunds will be made after the goods are returned in their original
+                                    condition:
+                                </p>
+                                <ul>
+                                    <li>20 g Protein - Per 55 g Serving</li>
+                                    <li>100% Whole Grains</li>
+                                    <li>No Added Sugar</li>
+                                    <li>Just Add Water</li>
+                                </ul>
+                                <p class="subtitle">Suggested use Pancakes</p>
+                                <p>1/2 cup mix + 1/3 cup cold water</p>
+                                <p><b>Heat griddle</b> to low heat (285-295°F).</p>
+                                <p><b>Combine & whisk</b> ingredients until blended. Set aside and let batter thicken
+                                    for 3
+                                    minutes.</p>
+                                <p>For thinner pancakes add 1-2 tbsp of water.</p>
+                                <p>
+                                    <b>Pour batter</b> into 3-4 four inch pancakes on a lightly greased, pre-heated
+                                    griddle.
+                                </p>
+                                <p>
+                                    <b>Cook slow-on-low</b> until no more bubbles are forming in the center and edges
+                                    look dry
+                                    (about 3 minutes). Flip and cook until golden brown.
+                                </p>
+                                <p class="subtitle">Want More Protein?</p>
+                                <p>
+                                    <b>23 g</b> - Replace water 1:1 with fat-free milk.
+                                </p>
+                                <p>
+                                    <b>26 g</b> - Replace water with 1 large egg + 1 Tbsp water.
+                                </p>
+                                <p class="subtitle">Disclaimer</p>
+                                <p>
+                                    While Food strives to ensure the accuracy of its product images and information,
+                                    some manufacturing changes to packaging and/or ingredients may be pending update on
+                                    our site. Although items may occasionally ship with alternate packaging, freshness
+                                    is always guaranteed. We recommend that you read labels, warnings and directions of
+                                    all products before use and not rely solely on the information provided by Food.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="roductdetails__infoblock">
+                                <p class="infoblock__title">Supplement Facts</p>
+                                <div class="productdetails__tablewrap">
+                                    <table class="table table-striped">
+                                        <tbody>
+                                            <tr>
+                                                <td>
+                                                    <b>Serving Size:</b> 1/2 Cup Mix (55 g)
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <b>Servings Per Container:</b> 6
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="productdetails__tablewrap">
+                                    <table class="table table-striped">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col tabletrtitle"></th>
+                                                <th scope="col amperserv">Amount Per Serving</th>
+                                                <th scope="col dailyval">% Daily Value*</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td class="tabletrtitle">Calories</td>
+                                                <td class="amperserv">210</td>
+                                                <td class="dailyval"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="tabletrtitle">Total Fat</td>
+                                                <td class="amperserv">4 g</td>
+                                                <td class="dailyval">5%</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="tabletrtitle">Saturated Fat</td>
+                                                <td class="amperserv">0 g</td>
+                                                <td class="dailyval">5%</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="tabletrtitle">Trans Fat</td>
+                                                <td class="amperserv">30 mg</td>
+                                                <td class="dailyval"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="tabletrtitle">Cholesterol</td>
+                                                <td class="amperserv">360 mg</td>
+                                                <td class="dailyval">10%</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="tabletrtitle">Sodium</td>
+                                                <td class="amperserv">24 g</td>
+                                                <td class="dailyval">16%</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="tabletrtitle">Total Carbohydrate</td>
+                                                <td class="amperserv">5 g</td>
+                                                <td class="dailyval">9%</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="tabletrtitle">Dietary Fiber</td>
+                                                <td class="amperserv">7 g</td>
+                                                <td class="dailyval">0%</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <p class="afttabtext">
+                                        *The % Daily Value tells you how much a nutrient in a serving of food
+                                        contributes to a daily diet. 2,000 calories a day is used for general nutrition
+                                        advice.
+                                    </p>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="roductdetails__infoblock">
+                                <p class="infoblock__title">Image</p>
+                                <div class="imgsbox">
+                                    <div class="imgcol">
+                                        <div class="imgwrap">
+                                            <img src="img/selleracc/modalimg1.png" alt="img">
+                                        </div>
+                                    </div>
+                                    <div class="imgcol">
+                                        <div class="imgwrap">
+                                            <img src="img/selleracc/modalimg2.png" alt="img">
+                                        </div>
+                                    </div>
+                                    <div class="imgcol">
+                                        <div class="imgwrap">
+                                            <img src="img/selleracc/modalimg3.png" alt="img">
+                                        </div>
+                                    </div>
+                                    <div class="imgcol">
+                                        <div class="imgwrap">
+                                            <img src="img/selleracc/modalimg4.png" alt="img">
+                                        </div>
+                                    </div>
+                                    <div class="imgcol">
+                                        <div class="imgwrap">
+                                            <img src="img/selleracc/modalimg5.png" alt="img">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#" class="greenbtn editinformation">Edit information</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
