--- a/sitemap.html
+++ b/sitemap.html
@@ -60,6 +60,9 @@
             <li><a href="seller-create-acc-st3.html" target="_blank">Create a seller account (SMS code)</a></li>
             <li><a href="seller-acc-product-list.html" target="_blank">Seller Account/Product list</a></li>
             <li><a href="seller-acc-product-list-addproduct.html" target="_blank">Seller Account/Product list - Add Product</a></li>
+            <li><a href="seller-acc-delete-items.html" target="_blank">Seller Account/Product list - Deleted items</a></li>
+            <li><a href="seller-acc-order-list.html" target="_blank">Seller Account/Order list</a></li>
+           
         </ul>
     </div>
 
