--- a/seller-acc-order-list-addorder.html
+++ b/seller-acc-order-list-addorder.html
@@ -161,10 +161,10 @@
                                 <div class="acccontentsect__body">
                                     <div class="selleraccwhwrap">
                                         <div class="row selleraccwhwrap__head">
-                                            <div class="col-lg-7">
+                                            <div class="col-md-7">
                                                 <p class="title">About order</p>
                                             </div>
-                                            <div class="col-lg-5 text-end">
+                                            <div class="col-md-5 text-end">
                                                 <a href="#" class="titlelink"><img src="img/selleracc/plus-icon.svg" alt="add"> Add product</a>
                                             </div>
                                         </div>
@@ -200,13 +200,13 @@
                                     </div>
 
                                     <div class="row">
-                                        <div class="col-lg-6">
+                                        <div class="col-xl-6">
                                             <div class="selleraccwhwrap">
                                                 <div class="row selleraccwhwrap__head-border">
-                                                    <div class="col-lg-7">
+                                                    <div class="col-md-7">
                                                         <p class="title">Client</p>
                                                     </div>
-                                                    <div class="col-lg-5 text-end">
+                                                    <div class="col-md-5 text-end">
                                                         <a href="#" class="titlelink"><img src="img/selleracc/plus-icon.svg" alt="add"> Add client</a>
                                                     </div>
                                                 </div>
@@ -214,16 +214,15 @@
                                                     <p class="title">Payment</p>
                                                     <div class="generalselect">
                                                         <select class="customselect" name="Accepted">
-                                                            <option value="0">Accept</option>
-                                                            <option value="1">Waiting for payment</option>
-                                                            <option value="2">Cancel</option>
-                                                            <option value="3">Successfully delivered</option>
+                                                            <option value="0">By cash</option>
+                                                            <option value="1">By cash</option>
+                                                            <option value="2">By cash</option>
                                                         </select>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-6">
+                                        <div class="col-xl-6">
                                             <div class="selleraccwhwrap">
                                                 <div class="row selleraccwhwrap__head-border">
                                                     <div class="col-lg-12">
@@ -231,25 +230,24 @@
                                                     </div>
                                                     <div class="generalselect">
                                                         <select class="customselect" name="Accepted">
-                                                            <option value="0">Accept</option>
-                                                            <option value="1">Waiting for payment</option>
-                                                            <option value="2">Cancel</option>
-                                                            <option value="3">Successfully delivered</option>
+                                                            <option value="0">Faster delivery</option>
+                                                            <option value="1">Faster delivery</option>
+                                                            <option value="2">Faster delivery</option>
+                                                            <option value="3">Faster delivery</option>
                                                         </select>
                                                     </div>
                                                 </div>
                                                 <div class="selleraccwhwrap__body">
-                                                    <!-- <p class="title">Address <a href="#">Edit</a></p> -->
                                                     <div class="row">
-                                                        <div class="col-lg-7">
+                                                        <div class="col-md-7">
                                                             <p class="title">Address</p>
                                                         </div>
-                                                        <div class="col-lg-5 text-end">
-                                                            <a href="#">Edit</a>
+                                                        <div class="col-md-5 text-end">
+                                                            <a href="#" class="grlink">Edit</a>
                                                         </div>
                                                     </div>
 
-                                                    <ul>
+                                                    <ul class="addordlist">
                                                         <li>via Bordina 6</li>
                                                         <li>Bergamo, PG 06034</li>
                                                         <li>English</li>
@@ -257,6 +255,10 @@
                                                 </div>
                                             </div>
                                         </div>
+                                    </div>
+
+                                    <div class="addordbtnsave">
+                                        <a href="#" class="greenbtn">Save</a>
                                     </div>
                                 </div>
                             </div>
@@ -335,6 +337,8 @@
             </div>
         </div>
     </footer>
+
+
 
     <!-- Modal -->
     <div class="modal fade generalmodal largemodal" id="proddetails" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -553,6 +557,19 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
