--- a/sitemap.html
+++ b/sitemap.html
@@ -63,7 +63,7 @@
             <li><a href="seller-acc-delete-items.html" target="_blank">Seller Account/Product list - Deleted items</a></li>
             <li><a href="seller-acc-order-list.html" target="_blank">Seller Account/Order list</a></li>
             <li><a href="seller-acc-order-list-addorder.html" target="_blank">Seller Account/Order list - Add Order</a></li>
-           
+            <li><a href="seller-acc-promotion-list.html" target="_blank">Seller Account/Promotion list</a></li>
         </ul>
     </div>
 
