--- a/sitemap.html
+++ b/sitemap.html
@@ -58,12 +58,13 @@
             <li><a href="seller-create-acc-st1.html" target="_blank">Create a seller account</a></li>
             <li><a href="seller-create-acc-st2.html" target="_blank">Create a seller account (phone number)</a></li>
             <li><a href="seller-create-acc-st3.html" target="_blank">Create a seller account (SMS code)</a></li>
-            <li><a href="seller-acc-product-list.html" target="_blank">Seller Account/Product list</a></li>
-            <li><a href="seller-acc-product-list-addproduct.html" target="_blank">Seller Account/Product list - Add Product</a></li>
+            <li><a href="seller-acc-product-list.html" target="_blank">Seller Account / Product list</a></li>
+            <li><a href="seller-acc-product-list-addproduct.html" target="_blank">Seller Account / Product list - Add Product</a></li>
             <li><a href="seller-acc-delete-items.html" target="_blank">Seller Account/Product list - Deleted items</a></li>
-            <li><a href="seller-acc-order-list.html" target="_blank">Seller Account/Order list</a></li>
+            <li><a href="seller-acc-order-list.html" target="_blank">Seller Account / Order list</a></li>
             <li><a href="seller-acc-order-list-addorder.html" target="_blank">Seller Account/Order list - Add Order</a></li>
-            <li><a href="seller-acc-promotion-list.html" target="_blank">Seller Account/Promotion list</a></li>
+            <li><a href="seller-acc-promotion-list.html" target="_blank">Seller Account / Promotion list</a></li>
+            <li><a href="seller-acc-add-promotion.html" target="_blank">Seller Account / Add promotion</a></li>
         </ul>
     </div>
 
